<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_close" />
    <item
        android:id="@+id/action_edit_title"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_set_title" />
    <item
        android:id="@+id/change_oretation"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_orientation" />
    <item
        android:id="@+id/action_set_pass"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_set_pass" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout" />

</menu>
