<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_Background"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background" >

        <EditText
            android:id="@+id/login_id"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/layy13"
            android:background="@drawable/edit_animotion"
            android:ellipsize="end"
            android:hint="@string/login_id_hint"
            android:maxLength="10"
            android:maxLines="1"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_below="@id/login_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layy13"
            android:background="@drawable/edit_animotion"
            android:ellipsize="end"
            android:hint="@string/inputpasswordhint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/passwordstate"
            android:layout_width="@dimen/layx31"
            android:layout_height="@dimen/layx31"
            android:layout_below="@id/login_id"
            android:layout_marginTop="@dimen/layy33"
            android:layout_toRightOf="@+id/login_password"
            android:background="@drawable/open" />

        <Button
            android:id="@+id/login_loging_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layy13"
            android:background="@drawable/login_button"
            android:text="@string/loginbtnstring"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_brand"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_above="@+id/login_id"
            android:layout_alignLeft="@+id/login_id"
            android:layout_alignStart="@+id/login_id"
            android:layout_marginBottom="57dp"
            android:background="@drawable/img_0499"
            android:contentDescription="sss"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>